syntax = "proto3";

package catalog;
option go_package = "./internal/pb/catalog";

service CatalogService {
  rpc ProcessMetadata(MetadataRequest) returns (MetadataResponse);
}

message MetadataRequest {
  string table_name = 1;
  string metadata_json = 2;
}

message MetadataResponse {
  string status = 1;
  string message = 2;
}